# Linkedin_parser

./: .env.example  .gitignore  README.md  base_automatation.py  config.py  linkedin_automation.py  main.py  models.py  parser.py  pyproject.toml  search_engine.py  utils.py
base/: base_automatation.py  base_parser.py  base_search_engine.py
